--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 --><button onclick="updateCode()"><img src="images/update.png"></img></button><!--
                 --><button onclick="togglePaused()" id="pause"><img src="images/pause.png"></img></button><!--
                 --><button onclick="step()"><img src="images/step.png"></img></button><!--
+                --><button onclick="openReadme()"><img src="images/help.png"></img></button><!--
             --></div><br/><div contenteditable="plaintext-only"
                    id="code"
                    spellcheck="false"></div><!--
