--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width">
         <title>Cells</title>
         <link href="style.css" rel="stylesheet" type="text/css" />
+        <link rel="icon" type="image/x-icon" href="icon.ico">
     </head>
     <body>
         <canvas id="canvas"></canvas><!--
