Disabled code autocorrect

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
                 --><button onclick="step()"><img src="images/step.png"></img></button><!--
                 --><button onclick="openReadme()"><img src="images/help.png"></img></button><!--
             --></div><br/><div contenteditable="plaintext-only"
-                   id="code"
-                   spellcheck="false"></div><!--
+                id="code"
+                autocomplete="off"
+                autocorrect="off"
+                autocapitalize="off"
+                spellcheck="false"
+                data-gramm="false"
+                data-gramm_editor="false"
+                data-enable-grammarly="false"></div><!--
             --><div id="code-highlighted"></div><!--
             --><br/><div id="log"></div><!--
         --></div>
