--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 --><button onclick="togglePaused()" id="pause"><img src="images/pause.png"></img></button><!--
                 --><button onclick="step()"><img src="images/step.png"></img></button><!--
                 --><button onclick="openReadme()"><img src="images/help.png"></img></button><!--
+                --><button onclick="openMore()"><img src="images/more.png"></img></button><!--
             --></div><br/><div contenteditable="plaintext-only"
                 id="code"
                 autocomplete="off"
