Fix for Firefox

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 --><button onclick="step()"><img src="images/step.png"></img></button><!--
                 --><button onclick="openReadme()"><img src="images/help.png"></img></button><!--
                 --><button onclick="openMore()"><img src="images/more.png"></img></button><!--
-            --></div><br/><div contenteditable="plaintext-only"
+            --></div><br/><div contenteditable="true"
                 id="code"
                 autocomplete="off"
                 autocorrect="off"
